--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hola
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>RcmSalud</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<body>
+  <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.705d6908d8b9f87c.js" type="module"></script><script src="polyfills.bddf93143ca38ba1.js" type="module"></script><script src="main.3bf29e7f5e515cbe.js" type="module"></script>
+
+</body></html>
